try to fix spacing for inputs in individual summary view

--- a/public/app.css
+++ b/public/app.css
@@ -17,6 +17,7 @@ button {
   font-weight: bold;
 }
 
+/* hide sections on render */
 .login,
 .dashboard,
 .create-tracker,
@@ -34,6 +35,7 @@ button {
   padding: 1em;
 }
 
+/* navigation  */
 .header-container {
   display: flex;
   justify-content: space-between;
@@ -88,6 +90,7 @@ button {
   width: 50%;
 } */
 
+
 h2 {
   padding: 0.25em;
   background-color: #eceff1;
@@ -98,7 +101,7 @@ h2 {
 .tracker-container {
   flex-grow: 1;
   /* flex-basis: 50%; */
-  /* max-width: 800px; */
+  max-width: 95%;
   margin: 5px;
   padding: 10px;
   border: 1.5px solid #ffd54f;
@@ -157,16 +160,19 @@ ul {
 
 .edit-trkr-label {
   display: block;
+  margin: auto 0;
   /* width: 100% */
 }
 
 .edit-trkr-field {
-  margin: 0 auto;
   height: auto;
   width: 95%; 
-  padding: 5px;
+  padding: 10px;
+  margin: 10px;
   border: 1px solid #7da453;;
   border-radius: 3px;
+  background-color: white; 
+  font-size: 15px;
 } 
 
 .notes-container {
@@ -176,18 +182,16 @@ ul {
   padding: 5px;
 }
 
-.notes {
-  text-align: center;
-}
-
 .trkr-sumry-notes {
   resize: none;
-  margin: 0 auto;
+  /* margin: 0 auto; */
   width: 95%;
   height: 100px;
   border: 1px solid #7da453;
   border-radius: 3px;
-  padding: 5px;
+  padding: 10px;
+  margin: 10px;
+  font-size: 15px;
 }
 
 .trkr-btn {
@@ -216,7 +220,6 @@ ul {
 
 .dashboard-btn-row {
   display: flex;
-  /* justify-content: flex-end;   */
   justify-content: center;
   margin-right: 5px;
 }
@@ -225,14 +228,7 @@ ul {
   display: flex;
   justify-content: flex-end;
   flex-wrap: wrap;
-  margin-top: 15px;
-}
-
-fieldset {
-  display: flex;
-  padding: 0;
-  border: 0;
-  margin: 0;
+  margin-top: 5px;
 }
 
 .create-form {
@@ -245,7 +241,6 @@ fieldset {
 
 .new-trkr-label {
   font-size: 18px;
-  /* text-align: center; */
 }
 
 .new-trkr-input {
@@ -269,7 +264,6 @@ fieldset {
   font-size: 15px;
   text-align: center;
   padding: 5px;
-  /* font-style: italic; */
 }
 
 .tracker-notes {
